--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
   <title>The Phone Fix</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  
+
+  <meta name="author" content="The Phone Fix">
+  <meta property="og:title" content="The Phone Fix">
+  <meta name="description" content="Sales & Repair Shop in Huddersfield: From cracked screens to battery issues, we fix all devices with expert care. Shop top-quality phones, laptops, and tablets; certified, tested, and ready for you.">
+  <meta name="keywords" content="thephonefix, phonefix, huddersfield repair phone shop, phone repairs shop, phone fix, huddersfield best phone repairs">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="The Phone Fix">
+  <!-- favicon  -->
+  <link rel="shortcut icon" href="https://i.ibb.co/WWPMKLv2/h-1.png" type="image/x-icon">
+  <link href="https://i.ibb.co/WWPMKLv2/h-1.png" rel="apple-touch-icon">
+  <meta itemprop="image" content="https://i.ibb.co/WWPMKLv2/h-1.png">
+
   <!-- bootstrap css -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- style css -->
@@ -96,7 +106,7 @@
                   </div>
                 </div>
                 <div class="col-md-6">
-                  <div class="image_1"><img src="https://i.ibb.co/j9Z9LcQn/image.png"></div>
+                  <div class="image_1"><img src="images/img-1.png"></div>
                 </div>
               </div>
             </div>
